doc: adding the swagger file
